# heart-rate-widget

./: .gitignore  README.md  index.html  package-lock.json  package.json
.cargo/: config.toml
.github/workflows/: build.yml
src/: App.tsx  HeartRateChart.tsx  MetricsPanel.tsx  SystemMonitor.tsx  index.css
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/src/: ble.rs  logger.rs  main.rs  system_monitor.rs
