[package]
name = "heart-rate-widget"
version = "1.0.0"
description = "蓝牙心率监测桌面小组件"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5.0"
tokio = { version = "1", features = ["full"] }
btleplug = "0.11"
uuid = "1"
rand = "0.8"
tokio-stream = "0.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
